k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  labels:
    app: todo-app
    app.kubernetes.io/name: todo-app
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: todo-demo
spec:
  selector:
    app: todo-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
  sessionAffinity: None
