k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-app
  labels:
    app: todo-app
    app.kubernetes.io/name: todo-app
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: todo-demo
spec:
  to:
    kind: Service
    name: todo-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
